--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -3,25 +3,17 @@
     android:layout_height="fill_parent">
   	<LinearLayout 
   	    android:id="@+id/mainL"
-  	   android:layout_height="wrap_content"
+  	   android:layout_height="50dp"
     android:layout_alignParentTop="true"
     android:layout_width="fill_parent"
-    android:weightSum="2"
-    android:padding="5dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:gravity="left">
 	<ImageView 
-		android:id="@+id/poznanapi"
-		android:layout_height="30dp"
-		android:layout_width="fill_parent"		
-		android:src="@drawable/poznan"
-		android:layout_weight="1"/>
-	<ImageView
-		android:id="@+id/gepoz"
-		android:layout_height="30dp"
-		android:layout_width="fill_parent"
-		android:layout_toRightOf="@id/poznanapi"
-		android:src="@drawable/geopoz"
-		android:layout_weight="1" />
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"		
+		android:src="@drawable/itiner_logo"
+		android:padding="4dp"
+		/>
 	</LinearLayout>
 <ScrollView
 	android:layout_width="fill_parent"
@@ -34,17 +26,16 @@
   	android:layout_height="wrap_content"
   	android:orientation="vertical"
   	android:padding="10dp">
-  
 	<TextView
 		android:layout_alignParentTop="true"  	
 	  	android:textColor="@color/white"
 	  	android:textColorHighlight="@color/green"
+	  	android:textSize="12sp"
 	  	android:layout_width="fill_parent"
 	  	android:layout_height="wrap_content"
 	  	android:id="@+id/about_description"
-	  	android:autoLink="web"
 	  	android:text="@string/description"/>
-
+      
   </RelativeLayout>
 </ScrollView>
 </RelativeLayout>
