--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -86,6 +86,7 @@ android:layout_below="@id/actionbar"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
 	   	android:text="Imię i/lub nazwisko osoby zmarłej"
+	   	android:paddingLeft="1dp"
 	   	/>
 	<LinearLayout
 		android:layout_width="fill_parent"
@@ -134,7 +135,8 @@ android:layout_below="@id/actionbar"
 	   	android:id="@+id/necropolis_header"
 	   	android:layout_width="fill_parent"
 	   	android:layout_height="wrap_content"
-	   	android:text="Cmentarz"/>
+	   	android:text="Cmentarz"
+	   	android:paddingLeft="1dp"/>
    	<Spinner 
 	   	android:paddingTop="5dp"
 	   	android:id="@+id/necropolis_spinner"
@@ -282,22 +284,30 @@ android:layout_below="@id/actionbar"
 <!--		android:paddingLeft="10dp"-->
 <!--		android:background="@color/white"-->
 <!--		android:text="Dane z API "/>-->
-<LinearLayout android:layout_height="wrap_content"
+<LinearLayout android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:weightSum="2">
+    >
+	<TextView android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:text="Dane: API poznan.pl"
+	    android:gravity="center_vertical"
+	    android:textColor="#606060"
+	    android:layout_gravity="center_vertical"
+	    android:paddingLeft="1dp"
+	    />
 	<ImageView 
 		android:id="@+id/poznanapi"
-		android:layout_height="30dp"
-		android:layout_width="fill_parent"		
-		android:src="@drawable/poznan"
-		android:layout_weight="1"/>
+		android:layout_height="15dp"
+		android:layout_width="wrap_content"		
+		android:src="@drawable/poznan_small"
+		android:layout_gravity="center_vertical"/>
 	<ImageView
 		android:id="@+id/gepoz"
-		android:layout_height="30dp"
-		android:layout_width="fill_parent"
+		android:layout_height="15dp"
+		android:layout_width="wrap_content"
 		android:layout_toRightOf="@id/poznanapi"
-		android:src="@drawable/geopoz"
-		android:layout_weight="1" />
+		android:src="@drawable/geopoz_small"
+		android:layout_gravity="center_vertical" />
 	</LinearLayout>
 	</RelativeLayout>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 </RelativeLayout>
