--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -186,6 +186,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/header_graveinfo"
+		android:apiKey=""
         android:clickable="true"
         android:enabled="true" />
     <!--
