--- a/res/layout/nutiteq.xml
+++ b/res/layout/nutiteq.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-   <com.nutiteq.android.MapView
-	   	android:id="@+id/nutiteq_mapview"
-	   	android:layout_width="fill_parent"
-	   	android:layout_height="fill_parent">
- 	</com.nutiteq.android.MapView>
- 	
-<ZoomControls
-android:id="@+id/zoomcontrols"
-    android:layout_width="wrap_content" 
-   android:layout_height="wrap_content"
-    android:layout_alignParentRight="true" 
-android:layout_alignParentBottom="true" 
-/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<com.nutiteq.android.MapView android:id="@+id/nutiteq_mapview"
+		android:layout_width="fill_parent" android:layout_height="fill_parent">
+	</com.nutiteq.android.MapView>
+
+	<ZoomControls android:id="@+id/zoomcontrols"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentBottom="true" />
 </RelativeLayout>
