--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:title="O programie" android:id="@+id/menuAbout" android:icon="@android:drawable/ic_menu_info_details"></item>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:title="O programie" android:id="@+id/menuAbout"
+		android:icon="@android:drawable/ic_menu_info_details"></item>
 </menu>
